--- a/style.css
+++ b/style.css
@@ -24,10 +24,16 @@ main {
 }
 .list-item {
     height: 3em;
+    /*
     margin-bottom: 0.5em;
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    */
     padding: .75rem 1.25rem;
     border: 1px solid rgba(0,0,0,.125);
     box-sizing: border-box;
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.1);
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+}
+.events-wrapper {
+    margin: 0;
+    padding: 0;
 }
