--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ header {
     width: 100%;
     padding: 0;
     height: 4em;
+    display: flex;
+    align-items: center; 
+}
+#bar {
+    width: 100%;
+    display: flex; 
+    margin: 1em; 
+    align-items: center; 
 }
 main {
     margin: 4em 0 0 0;
@@ -22,16 +30,21 @@ main {
     min-height: 1em;
     padding: 1em;
 }
-.list-item {
+.event {
     height: 3em;
     /*
     margin-bottom: 0.5em;
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.1);
     box-shadow: 0 0 10px rgba(0,0,0,.1);
     */
-    padding: .75rem 1.25rem;
+    padding: .75rem;
     border: 1px solid rgba(0,0,0,.125);
     box-sizing: border-box;
+    overflow-x: scroll;
+    white-space: nowrap;
+}
+.event-field {
+    flex: 1;
 }
 .events-wrapper {
     margin: 0;
